--- a/packages/frontend/src/containers/Pricing/index.module.css
+++ b/packages/frontend/src/containers/Pricing/index.module.css
@@ -5,3 +5,14 @@
 .table tr td:not(:first-child) {
     padding: 5px 15px;
 }
+
+.price_ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 41px;
+    width: 100px;
+}
+
+.price_ul li {
+    margin-top: 10px;
+}
