--- a/packages/backend/src/public/emails/html.pug
+++ b/packages/backend/src/public/emails/html.pug
@@ -56,7 +56,7 @@ html(lang="en")
                                         td(align="center", style="color: #888888; font-size: 16px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;")
                                             p(style="line-height: 24px; margin-bottom:15px;")
                                             p(style="line-height: 24px;margin-bottom:15px;") #{text}
-                                            a(href="http://localhost:3000/order?id=" + orderId) Link To Order
+                                            a(href=URL + "/order/" + orderId) Link To Order
             tr
                 td(height="40", style="font-size: 40px; line-height: 40px;")
 
