add new binding, paper, user

--- a/packages/frontend/src/components/DataTables/index.css
+++ b/packages/frontend/src/components/DataTables/index.css
@@ -31,6 +31,12 @@
     text-overflow: ellipsis;
 }
 
+.DataTable table tbody td > div.alert {
+    word-break: break-all !important;
+    white-space: normal;
+    /* height: 50px; */
+}
+
 .DataTable table tbody tr td button {
     color: #fff;
     background-image: none;
