--- a/packages/frontend/src/containers/Login/index.module.css
+++ b/packages/frontend/src/containers/Login/index.module.css
@@ -36,3 +36,9 @@
   font-weight: bold;
   font-family: 'Roboto', arial, sans-serif;
 }
+
+.img {
+  min-height: 172px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
